# run-planner

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: CI.yml
tests/: test_engine.py  test_session_planner.py  test_views.py
website/: views.py
website/data/sessions/: Demo_Session_20260531170003.json
website/engine/: predictions.py  session_planner.py
website/engine/utils/: predictions.py
website/templates/: add_session.html  base.html  home.html  make_plan.html  predictions.html
