[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "website"
version = "0.1.0"
description = "Run Planner web application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.3",
    "colorama==0.4.6",
    "Flask==3.1.3",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "Werkzeug==3.1.8",
]

[tool.setuptools]
packages = ["website"]
